[package]
name = "kobot"
version = "0.1.1"
authors = ["nil <nil@kobold.dev>"]
edition = "2018"

[dependencies.tokio]
version = "0.2"
features = [
   "rt-threaded",
   "macros",
]

[dependencies.serenity]
version = "0.9"
default-features = false
features = [
   "client",
   "gateway",
   "rustls_backend",
   "model",
]
