[package]
name = "kobot"
version = "0.1.3"
authors = ["nil <nil@kobold.dev>"]
edition = "2018"

[dependencies]
thiserror = "1"

[dependencies.tokio]
version = "0.2"
features = [
   "rt-threaded",
   "macros",
]

[dependencies.serenity]
version = "0.9"
default-features = false
features = [
   "client",
   "cache",
   "gateway",
   "rustls_backend",
   "model",
]

[dependencies.redis]
version = "0.16"
features = [
   "tokio-comp",
]
